--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Aqraa Institute - Learn &amp; Memorize the Quran</title>
+    <title>Iqraa Institute - Learn &amp; Memorize the Quran</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/png" href="logos.png" />
